--- a/package.json
+++ b/package.json
@@ -10,15 +10,32 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.40",
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/button": "^2.0.37",
+    "@nextui-org/card": "^2.0.33",
+    "@nextui-org/chip": "^2.0.32",
+    "@nextui-org/input": "^2.2.4",
+    "@nextui-org/select": "^2.2.5",
+    "@nextui-org/skeleton": "^2.0.31",
+    "@nextui-org/slider": "^2.2.15",
+    "@nextui-org/switch": "^2.0.33",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
+    "@nextui-org/tooltip": "^2.0.39",
     "ai": "^3.3.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "endent": "^2.1.0",
     "framer-motion": "^11.3.21",
     "geist": "^1.3.1",
+    "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -27,8 +44,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
